--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:h2:tcp://localhost/~/jpashop
 spring.datasource.username=sa
 spring.datasource.password=
 
-JPA log
+#JPA log
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.show_sql=true
